--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="header-bar">
-  <h1>*folio</h1>
-  <h2>simple whitespace theme</h2>
+  <h1>hi. i'm christine.</h1>
+  <h2>have a peek at what i've created while learning web development</h2>
   <br/>
   <hr>
   <br/>
