--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-bar">
   <h1>hi. i'm christine.</h1>
-  <h2>have a peek at what i've created while learning web development</h2>
+  <h2>check out my web development projects</h2>
   <br/>
   <hr>
   <br/>
