--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-bar">
   <h1>hi. i'm christine.</h1>
-  <h2>check out my web development projects...</h2>
+  <h2>web development & design projects coming soon...</h2>
   <br/>
   <hr>
   <br/>
