--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-bar">
   <h1>hi. i'm christine.</h1>
-  <h2>welcome to my portfolio site.</h2>
+  <h2>welcome to my <a href="https://www.webdevholland.com/portfolio/projects/">portfolio</a>.</h2>
   <br/>
   <hr>
   <br/>
